# Qt3DDragExample

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
3pp/Hof/cmake_config/: hofConfig.cmake  hofTargets.cmake
3pp/Hof/include/: hof.hpp
3pp/Hof/include/hof/: alias.hpp  always.hpp  apply.hpp  apply_eval.hpp  arg.hpp  capture.hpp  combine.hpp  compose.hpp  config.hpp  construct.hpp  decay.hpp  decorate.hpp  eval.hpp  first_of.hpp  fix.hpp  flip.hpp  flow.hpp  fold.hpp  function.hpp  function_param_limit.hpp  identity.hpp  if.hpp  implicit.hpp  indirect.hpp  infix.hpp  is_invocable.hpp  is_unpackable.hpp  lambda.hpp  lazy.hpp  lift.hpp  limit.hpp  match.hpp  mutable.hpp  pack.hpp  partial.hpp  pipable.hpp  placeholders.hpp  proj.hpp  protect.hpp  repeat.hpp  (+11 more)
3pp/Hof/include/hof/detail/: and.hpp  callable_base.hpp  can_be_called.hpp  compressed_pair.hpp  constexpr_deduce.hpp  delegate.hpp  forward.hpp  holder.hpp  intrinsics.hpp  join.hpp  make.hpp  move.hpp  noexcept.hpp  pp.hpp  recursive_constexpr_depth.hpp  remove_rvalue_reference.hpp  result_of.hpp  result_type.hpp  seq.hpp  static_const_var.hpp  unpack_tuple.hpp  unwrap.hpp  using.hpp
3pp/doctest/cmake/: doctestConfig.cmake  doctestConfigVersion.cmake  doctestTargets.cmake
3pp/magic_enum/cmake_config/: magic_enumConfig.cmake  magic_enumTargets.cmake
cmake/: add_3pp.cmake  conan.cmake  install_dependencies.cmake  modify_default_settings.cmake  recognize_build_type.cmake  recognize_compiler.cmake  recognize_platform.cmake  set_cpp_standard.cmake  set_ignore_warnings_from_thirdparty.cmake  set_options.cmake  set_output_paths.cmake  set_warning_level_to_max.cmake  set_warnings_as_errors.cmake  setup_Qt.cmake  setup_testing.cmake
src/: .clang-format  CMakeLists.txt  CubeManager.cpp  CubeManager.hpp  SceneWidget.cpp  SceneWidget.hpp  main.cpp  scenemodifier.cpp
src/Model/: CMakeLists.txt  Model.hpp
src/Program/: CMakeLists.txt  DummyTestConfig.cpp  main.cpp
src/Program/Glue/: ModelAdapter.cpp  ModelAdapter.hpp
src/UI/: CMakeLists.txt  IModel.cpp  IModel.hpp  UI.cpp  UI.hpp
src/UI/detail/: CubeManager.hpp  MovableEntity.cpp  MovableEntity.hpp  MoveDragger.cpp  MoveDragger.hpp  SceneWidget.cpp  initializeContent.cpp  initializeContent.hpp
src/UnitTestRunner/: CMakeLists.txt
